--- a/assets/public/src/scss/templates/_single.scss
+++ b/assets/public/src/scss/templates/_single.scss
@@ -1,8 +1,9 @@
 body.single {
-    background-color: $content-bg;
+    background-color: $content-bg !important;
+
     #primary {
-        margin-top: 0;
-        padding-left: 30px;
+        margin-top: 0 !important;
+        padding-right: 30px;
 
         ul {
             list-style-type: disc;
