--- a/assets/public/src/scss/templates/_blog.scss
+++ b/assets/public/src/scss/templates/_blog.scss
@@ -1,5 +1,9 @@
 body.blog {
-    #primary {
+    background-color: $content-bg;
+
+    #primary.primary {
+        margin-top: 0;
+
         @media (max-width: 575.98px) {
             display: flex;
             gap: 15px;
@@ -31,6 +35,15 @@ body.blog {
             .read-more {
                 display: none;
             }
+        }
+    }
+
+    #secondary {
+        margin-top: 0;
+        padding: 0 0 0 30px !important;
+
+        @media (max-width: 575.98px) {
+            padding: 0 !important;
         }
     }
 }
