--- a/assets/public/src/scss/templates/_blog.scss
+++ b/assets/public/src/scss/templates/_blog.scss
@@ -3,37 +3,50 @@ body.blog {
 
     #primary.primary {
         margin-top: 0;
-
+        gap: 15px;
+        
         @media (max-width: 575.98px) {
             display: flex;
-            gap: 15px;
         }
 
-        article {
+        .posts-container {
+            display: grid;
+            grid-template-columns: repeat(1, 1fr);
+            gap: 15px;
+
             @media (max-width: 575.98px) {
-                width: 50%;
+                grid-template-columns: repeat(1, 1fr);
             }
+
+            article {
+                border: 1px solid $primary;
+        
+                .blog-single-container {
+                    .image-container {
+                        width: 100px;
+                        height: 100px;
+                        border-radius: 5px;
+                        background-size: cover;
+                    }
     
-            .blog-single-container {
-                .image-container {
-                    width: 140px;
-                    height: 140px;
-                    border-radius: 5px;
-                    background-size: cover;
-                }
+                    .excerpt,
+                    h2 {
+                        text-decoration: none;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                        display: -webkit-box;
+                        -webkit-box-orient: vertical;
+                        -webkit-line-clamp: 1;
+                    }
 
-                .excerpt {
-                    text-decoration: none;
-                    overflow: hidden;
-                    text-overflow: ellipsis;
-                    display: -webkit-box;
-                    -webkit-box-orient: vertical;
-                    -webkit-line-clamp: 3;
+                    .post-category {
+                        padding: 1px 8px;
+                    }
                 }
-            }
-
-            .read-more {
-                display: none;
+    
+                .read-more {
+                    display: none;
+                }
             }
         }
     }
