Styling and additional functionality

--- a/assets/public/src/scss/components/_navigation.scss
+++ b/assets/public/src/scss/components/_navigation.scss
@@ -104,6 +104,10 @@
 }
 
 .header-search-form {
+    .brand {
+        font-family: Agbalumo;
+    }
+    
     &__form {
         form {
             height: 40px;
