--- a/assets/public/src/scss/_utilities.scss
+++ b/assets/public/src/scss/_utilities.scss
@@ -14,3 +14,28 @@
 .fs-10 {
     font-size: .5rem;
 }
+
+.term-description {
+    strong {
+        background: linear-gradient(-45deg, #41dce8, #c882f0, #5ab7f2);
+        background-size: 250% 250%;
+        animation: gradient 4s ease infinite;
+        border-radius: 5px;
+        color: #fff;
+        width: 100%;
+        display: block;
+        text-align: center;
+    
+        @keyframes gradient {
+            0% {
+                background-position: 0% 50%;
+            }
+            50% {
+                background-position: 100% 50%;
+            }
+            100% {
+                background-position: 0% 50%;
+            }
+        }
+    }
+}
