--- a/assets/public/src/scss/templates/_single.scss
+++ b/assets/public/src/scss/templates/_single.scss
@@ -2,7 +2,7 @@ body.single {
     background-color: $content-bg !important;
 
     #primary {
-        margin-top: 0 !important;
+        margin-top: 2em !important;
         padding-right: 30px;
 
         @media (max-width: 575.98px) {
@@ -36,7 +36,7 @@ body.single {
     }
 
     #secondary {
-        margin-top: 0;
+        margin-top: 2em;
 
         border-left: 0;
         padding: 0 0 0 30px;
