--- a/assets/public/src/scss/templates/_single.scss
+++ b/assets/public/src/scss/templates/_single.scss
@@ -1,49 +1,85 @@
 body.single {
     background-color: $content-bg !important;
 
-    #primary {
-        margin-top: 2em !important;
-        padding-right: 30px;
+    #content {
+        padding-top: 0 !important;
 
-        @media (max-width: 575.98px) {
-            padding-right: 0;
-            padding-left: 0;
+        h1 {
+            position: relative;
+            
+            &::after {
+                content: '';
+                position: absolute;
+                top: 0;
+                left: 0;
+                height: 100%;
+                width: 100%;
+                background: linear-gradient(to bottom, $primary, lighten($color: $primary, $amount: 20%), lighten($color: $primary, $amount: 40%), $content-bg);
+                z-index: -1;
+            }
         }
 
-        ul {
-            list-style-type: disc;
-        }
+        #primary {
+            margin-top: 2em !important;
+            padding-right: 30px;
+    
+            @media (max-width: 575.98px) {
+                margin-top: 0 !important;
+                padding-right: 0;
+                padding-left: 0;
+            }
+    
+            ul {
+                list-style-type: disc;
+            }
+    
+            article {
+                background-color: transparent;
+                padding: 0;
 
-        article {
-            background-color: transparent;
-            padding: 0;
-        }
+                .wp-post-image {
+                    width: 100%;
+                    height: 330px;
+                    object-fit: cover;
+                    object-position: top;
 
-        header.entry-header {
-            margin-bottom: 0;
-        }
+                    @media (max-width: 575.98px) {
+                        height: 200px;
+                    }
+                }
 
-        .entry-content {
-            .woocommerce-breadcrumb {
+                img {
+                    border-radius: 5px;
+                }
+            }
+    
+            header.entry-header {
                 margin-bottom: 0;
             }
-
-            & > img:first-of-type {
-                display: block;
-                margin: 20px auto;
+    
+            .entry-content {
+                .woocommerce-breadcrumb {
+                    margin-bottom: 0;
+                }
+    
+                & > img:first-of-type {
+                    display: block;
+                    margin: 20px auto;
+                }
+            }
+        }
+    
+        #secondary {
+            margin-top: 2em;
+    
+            border-left: 0;
+            padding: 0 0 0 30px;
+            padding-right: 0 !important;
+    
+            @media (max-width: 575.98px) {
+                padding: 0;
             }
         }
     }
 
-    #secondary {
-        margin-top: 2em;
-
-        border-left: 0;
-        padding: 0 0 0 30px;
-        padding-right: 0 !important;
-
-        @media (max-width: 575.98px) {
-            padding: 0;
-        }
-    }
 }
