--- a/assets/public/src/scss/templates/_blog.scss
+++ b/assets/public/src/scss/templates/_blog.scss
@@ -1,11 +1,12 @@
 body.blog,
-body.archive {
+body.archive,
+body.search {
     background-color: $content-bg;
 
     #content {
         padding-top: 0 !important;
 
-        h1 {
+        & > h1 {
             position: relative;
             
             &::after {
