--- a/assets/public/src/scss/style.scss
+++ b/assets/public/src/scss/style.scss
@@ -13,6 +13,7 @@
 @import 'components/breadcrumb';
 @import 'components/info-card';
 @import 'components/product';
+@import 'components/offcanvas';
 
 // Templates
 @import 'templates/front-page';
