Functionality to add video to gallery

--- a/assets/public/src/scss/templates/_products-archive.scss
+++ b/assets/public/src/scss/templates/_products-archive.scss
@@ -86,4 +86,10 @@ body.tax-product_cat {
             }
         }
     }
+
+    &.paged {
+        header.woocommerce-products-header {
+            height: auto !important;
+        }
+    }
 }
