--- a/assets/public/src/scss/templates/_single.scss
+++ b/assets/public/src/scss/templates/_single.scss
@@ -67,6 +67,42 @@ body.single {
                     margin: 20px auto;
                 }
             }
+
+            .woocommerce-product-gallery {
+                .custom-thumbnail-img {
+                    position: relative;
+                    cursor: pointer;
+                    overflow: hidden;
+
+                    &::after {
+                        content: 'VIDEO';
+                        font-size: 10px;
+                        color: #fff;
+                        position: absolute;
+                        bottom: 0;
+                        right: 0;
+                        width: 100%;
+                        text-align: center;
+                        background: linear-gradient(-45deg, #41dce8, #c882f0, #5ab7f2);
+                        background-size: 250% 250%;
+                        animation: gradient 4s ease infinite;
+                        border-top: 2px solid #fff;
+                        border-bottom: 2px solid #fff;
+
+                        @keyframes gradient {
+                            0% {
+                                background-position: 0% 50%;
+                            }
+                            50% {
+                                background-position: 100% 50%;
+                            }
+                            100% {
+                                background-position: 0% 50%;
+                            }
+                        }
+                    }
+                }
+            }
         }
     
         #secondary {
@@ -82,4 +118,70 @@ body.single {
         }
     }
 
+    .product-video {
+        position: fixed;
+        left: 0;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        padding: 50px;
+        z-index: 2020;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: rgba(0, 0, 0, 0.35);
+        transition: .3s all;
+
+        @media (max-width: 575.98px) {
+            padding: 15px;
+        }
+
+        &__container {
+            background: #000000c7;
+            height: 90%;
+            width: 70%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 10px;
+            position: relative;
+
+            @media (max-width: 575.98px) {
+                width: 100%;
+                height: 70%;
+            }
+
+            .close-video {
+                position: absolute;
+                top: 20px;
+                right: 20px;
+                color: #fff;
+                border: 1px solid #fff;
+                font-weight: 700;
+                font-size: 20px; 
+                border-radius: 50%;
+                transform: rotate(45deg);
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                padding: 12px;
+                width: 20px;
+                height: 20px;
+                cursor: pointer;
+            }
+
+            .video {
+                text-align: center;
+
+                video {
+                    width: 70%;
+
+                    @media (max-width: 575.98px) {
+                        width: 90%;
+                    }
+                }
+            }
+        }
+    }
 }
