Added shortcode for TOC, product video fine tuning, styling

--- a/assets/public/src/scss/style.scss
+++ b/assets/public/src/scss/style.scss
@@ -14,6 +14,8 @@
 @import 'components/info-card';
 @import 'components/product';
 @import 'components/offcanvas';
+@import 'components/table-of-content';
+@import 'components/post-images';
 
 // Templates
 @import 'templates/front-page';
