--- a/assets/public/src/scss/templates/_single.scss
+++ b/assets/public/src/scss/templates/_single.scss
@@ -88,6 +88,7 @@ body.single {
                         animation: gradient 4s ease infinite;
                         border-top: 2px solid #fff;
                         border-bottom: 2px solid #fff;
+                        z-index: 2020;
 
                         @keyframes gradient {
                             0% {
@@ -139,7 +140,7 @@ body.single {
 
         &__container {
             background: #000000c7;
-            height: 90%;
+            height: 95%;
             width: 70%;
             display: flex;
             align-items: center;
