--- a/assets/public/src/scss/components/_navigation.scss
+++ b/assets/public/src/scss/components/_navigation.scss
@@ -105,7 +105,7 @@
 
 .header-search-form {
     .brand {
-        font-family: Agbalumo;
+        font-family: 'Kanit', sans-serif;
     }
     
     &__form {
