--- a/assets/public/src/scss/_config.scss
+++ b/assets/public/src/scss/_config.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,400;0,700;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,700;1,400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
 
 * {
@@ -8,7 +8,7 @@
 }
 
 body {
-    font-family: 'Lato', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 a {
