--- a/assets/public/src/scss/components/_footer.scss
+++ b/assets/public/src/scss/components/_footer.scss
@@ -3,7 +3,8 @@ footer.site-footer {
         padding: 0;
 
         #block-29 {
-            padding: 40px 20px;
+            padding: 40px 20px 10px 20px;
+            margin-bottom: 0 !important;
     
             .bernal-col {
                 padding: 0 20px;
