--- a/assets/public/src/scss/_utilities.scss
+++ b/assets/public/src/scss/_utilities.scss
@@ -118,3 +118,23 @@
         color: #fff;
     }
 }
+
+.bernal-col-bg {
+    position: relative;
+    padding: 1rem 0;
+
+    &::after {
+        content: '';
+        position: absolute;
+        width: 110%;
+        height: 100%;
+        top: 0;
+        left: -5%;
+        // background-color: lighten($color: $primary, $amount: 63%);
+        transform: rotate(-1deg);
+        z-index: -1;
+        background: url('../img/column-bg-new.png') no-repeat center/cover;
+        border-top: 1px solid $primary;
+        border-bottom: 1px solid $primary;
+    }
+}
