--- a/assets/public/src/scss/templates/_cart.scss
+++ b/assets/public/src/scss/templates/_cart.scss
@@ -6,6 +6,7 @@ body.woocommerce-cart {
             position: sticky;
             top: 0;
             border-right: 0;
+            border-left: 0;
     
             @media (min-width: 992px) {
                 margin-top: 2em;
@@ -18,6 +19,62 @@ body.woocommerce-cart {
     
         #primary {
             margin-top: 2em;
+            padding: 0 60px;
+
+            @include media-breakpoint-down(sm) {
+                padding: 0;
+            }
+
+            .shop_table {
+                border: 0;
+                padding: 10px;
+                border-collapse: collapse;
+
+                thead {
+                    background-color: $content-bg;
+                }
+
+                tr {
+                    position: relative;
+
+                    &:not(:last-child) {
+                        border-bottom: 1px solid $primary !important;
+                    }
+
+                    td {
+                        border: 0;
+
+                        &.product-remove {
+                            position: absolute;
+                            right: 0;
+
+                            @include media-breakpoint-up(sm) {
+                                left: 0;
+                                right: unset;
+                                top: 50%;
+                                transform: translateY(-50%);
+                            }
+                        }
+
+                        &.product-thumbnail {
+                            a {
+                                width: 50%;
+                                display: block;
+                                margin: 0 auto;
+
+                                img {
+                                    width: 100%;
+                                    max-width: unset;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+
+            .cart_totals {
+                border: 0;
+            }
     
             .cart-empty {
                 border-color: $primary;
