Woo slider styling

--- a/assets/public/src/scss/style.scss
+++ b/assets/public/src/scss/style.scss
@@ -18,6 +18,7 @@
 @import 'components/post-images';
 @import 'components/hero-section';
 @import 'components/footer';
+@import 'components/woo-slider';
 
 // Templates
 @import 'templates/front-page';
