Additional woo slider styling

--- a/assets/public/src/scss/components/_woo-slider.scss
+++ b/assets/public/src/scss/components/_woo-slider.scss
@@ -17,6 +17,10 @@
             font-size: 12px;
             border-radius: 5px;
         }
+
+        img {
+            width: 100%;
+        }
     }
 }
 
